# GameDevelopLesta

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmaketests.yml  fedoraTests.yml  macOSTests.yml  ubuntuTests.yml  windowsMinGWTests.yml  windowsTests.yml
01-1-hello-world/: CMakeLists.txt  main.cpp
01-2-hellolib/: CMakeLists.txt
01-2-hellolib/lib/: CMakeLists.txt
01-2-hellolib/lib/include/: hello-lib.hxx
01-2-hellolib/lib/src/: hello-lib.cxx
02-1-sdl-static/: CMakeLists.txt
02-1-sdl-static/src/: main.cxx
02-1-sdl3/: CMakeLists.txt
02-1-sdl3-window/src/: main.cxx
02-2-sdl3/: CMakeLists.txt
03-1-sdl-loop/: CMakeLists.txt
03-1-sdl-loop/src/: main.cxx
03-2-sdl-loop-engine-lib/: CMakeLists.txt
03-2-sdl-loop-engine-lib/include/: engine.hxx
03-2-sdl-loop-engine-lib/src/: engine.cxx  game.cxx
03-3-sdl-engine-hot-reload/: CMakeLists.txt
03-3-sdl-engine-hot-reload/include/: engine.hxx
03-3-sdl-engine-hot-reload/src/: engine.cxx  game.cxx
04-1-render-basics/: CMakeLists.txt
04-1-render-basics/include/: 00-canvas-basic.hxx  01-render-object.hxx  04-render-conveyor.hxx
04-1-render-basics/src/: 00-canvas-basic-main.cxx  00-canvas-basic.cxx  01-line-render-main.cxx  01-render-object.cxx  02-triangle-render-main.cxx  03-triangle-indexed-render-main.cxx  04-interpolated-triangle-main.cxx  04-render-conveyor.cxx  05-render-full-window-main.cxx  06-render-full-window-main.cxx
04-2-opengl/: CMakeLists.txt
04-2-opengl/engine/: CMakeLists.txt
04-2-opengl/engine/include/: color.hxx  engine.hxx  file-last-modify-listener.hxx  shader-program.hxx  transform3d.hxx  vertex-array-object.hxx  vertex.hxx
04-2-opengl/engine/src/: engine.cxx  file-last-modify-listener.cxx  shader-program.cxx  vertex-array-object.cxx
04-2-opengl/shaders/: fragment.glsl  vertex.glsl
04-2-opengl/src/: game.cxx
06-1-texture-matrix/: CMakeLists.txt
06-1-texture-matrix/engine/: CMakeLists.txt
06-1-texture-matrix/src/: game.cxx
docker/: Dockerfile
